# eml_meir_databatch

./: .env  .gitignore  README.md  pyproject.toml
data/: variables.txt  variables_html.txt  variables_interest.txt  variables_load.txt  variables_new_august.txt
logs/: config_logger.yml
src/: helper_functions.py  main.py  meir.py
src/config/: config.yml
src/notebooks/: stave.ipynb
